[WCMSFEQ-161] - Removed padding for .cardBody at mobile breakpoint. Padding was causing spacing issues with the CTHP accordion.

--- a/CancerGov/_src/StyleSheets/_cthp.scss
+++ b/CancerGov/_src/StyleSheets/_cthp.scss
@@ -89,6 +89,10 @@
 .cthp-content .cardBody {
 	overflow: auto;
 	padding: 0.625em 0.8em;
+	
+	@include bp(small) {
+		padding: 0;
+	}
 }
 .cthp-pdq-label {
 	margin-top: 0;
